...
            }
            .padding(.leading, 20)
            Spacer()
            Button {
                appVM.isShowingSettings = true
            } label: {
                Image(systemName: "gearshape")
                    .font(.system(size: 20, weight: .regular))
                    .foregroundStyle(.primary)
            }
            .padding(.trailing, 20)
        }
        .frame(height: 50)
...
